Update notebook and readme

--- a/express_njtransit_routes_to_pabt.ipynb
+++ b/express_njtransit_routes_to_pabt.ipynb
@@ -2238,7 +2238,7 @@
    "metadata": {},
    "source": [
     "2. Copy map https://www.google.com/maps/d/edit?mid=1gbrVIEyaYfsTAUQjFQ27qrA-mPYEXhw&ll=40.70844175474683%2C-74.06476546082344&z=10\n",
-    "3. Import data from `express_routes_by_stop.csv`, using the settings below:"
+    "3. Import data from `express_routes_by_stop.csv`"
    ]
   },
   {
